build: remove commons-io from apt and openapi